Reduces the bottom space for cutoff issue (#1266)

--- a/www/src/scss/viewer.scss
+++ b/www/src/scss/viewer.scss
@@ -151,7 +151,7 @@ body {
 }
 
 .deck {
-  height: calc(100% - 100px);
+  height: calc(100% - 40px);
   opacity: 0;
   overflow: hidden;
   position: absolute;
